@@ -1,3 +1,8 @@
+2003-01-07  Hideyuki SHIRAI  <shirai@meadowy.org>
+
+	* mew-w3m.el (mew-w3m-ext-url-show): Use `mew-buffer-message'
+	instead of `mew-window-configure'.
+
 2003-01-06  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* mew-w3m.el (mew-w3m-ext-url-show): New funcition.
